Alot left to tweak but Assignment Finished

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h2>|&nbspTHANKS FOR STOPPING BY&nbsp|</h2>
                 <p class="footerP">Below you will find some links to 
                     get in touch with me. Don't hesitate to reach out 
-                    and I will get back to you rigth away.</p>
+                    and I will get back to you right away.</p>
             </div>
             <div class="ContactMTHDS">
                 <div class="email">
